<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordVault</string>
    <string name="password_list_title">Password Vault</string>
    <string name="password_title">Title</string>
    <string name="password_text">Password</string>
    <string name="password_creation_date">Creation Date</string>
    <string name="password_username">Username</string>
    <string name="password_notes">Notes</string>
    <string name="password_title_hint">enter a title</string>
    <string name="password_username_hint">enter a username</string>
    <string name="password_hint">enter a password</string>
    <string name="password_notes_hint">enter notes</string>
    <string name="password_generate">Generate Password</string>
    <string name="save_btn">Save</string>
    <string name="new_password">New Password</string>
    <string name="delete_password">Delete Password</string>
    <string name="alert_delete_title">Delete Password</string>
    <string name="alert_delete_message">Are you sure you want to delete this Password?</string>
    <string name="alert_change_password_title">Random Password</string>
    <string name="alert_change_password_message">Generate Password?</string>
    <string name="alert_navigate_home_title_empty_title">Navigate Back</string>
    <string name="alert_navigate_home_title_empty_message">No title present. If you go back this password will be deleted.  Are you sure?</string>
    <string name="copy_btn">Copy to Clipboard</string>
    <string name="toast_password_copied">Password Copied</string>
    <string name="toast_password_saved">Password Saved</string>
    <string name="toast_password_deleted">Password Deleted</string>
    <string name="password_website">Website</string>
    <string name="password_website_hint">www.google.com</string>
    <string name="options_title">Options</string>
    <string name="options_sort_alpha">Sort Alpha</string>
    <string name="options_sort_date">Sort by Date</string>
    <string name="options_preferences">Preferences</string>
    <string name="login_master_password_hint">vault master password</string>
    <string name="login_verify_password_hint">verify password</string>
    <string name="login_enter">Enter</string>
    <string name="login_error_passwords_dont_match">Passwords do not match</string>
</resources>
