<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_title"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_title"
        android:hint="@string/password_title_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_username"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_username"
        android:hint="@string/password_username_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_pass"
        android:hint="@string/password_hint"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_generate_btn"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/password_generate"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_notes"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_notes"
        android:hint="@string/password_notes_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">


    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_delete_btn"
            android:text="@string/delete_password"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_save_btn"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/save_btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="10dp"
            android:gravity="center" />
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
