<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item android:id="@+id/menu_item_new_password"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_password"
        android:showAsAction="never"/>-->
    <item android:id="@+id/menu_item_subMenu"
        android:title="@string/options_title"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_light"
        android:showAsAction="always">
        <menu>
            <item android:id="@+id/sub_menu_sort_alpha"
                android:title="@string/options_sort_alpha" />
            <item android:id="@+id/sub_menu_sort_date"
                android:title="@string/options_sort_date" />
            <!--<item android:id="@+id/sub_menu_preferences"
                android:title="@string/options_preferences" />-->
        </menu>
    </item>
</menu>