<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    >
    <EditText
        android:id="@+id/login_master_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login_master_password_hint"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:inputType="numberPassword" />
    <EditText
        android:id="@+id/login_verify_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login_verify_password_hint"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="numberPassword" />
    <Button
        android:id="@+id/login_enter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_enter"
        android:background="@drawable/button_border"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="50dp" />
</LinearLayout>